# aiohttp-apischema-py38

./: CHANGELOG.md  build-requirements.txt  example.py  pyproject.toml  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: DeployOnMergeMain.yml  TestOnPR.yml
aiohttp_apischema/: __init__.py  generator.py  response.py
tests/: test_generator.py
